--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 
 <h1> Welcome to My Personal Website </h1>
 
-<li><a href="2.html">About Me</a></li>
+<li><a href="about me.html">About Me</a></li>
 
-<li><a href="3.html">Resume</a></li>
+<li><a href="resume.html">Resume</a></li>
 
-<li><a href="4.html">My projects</a></li>
- <li><a href="5.html">Contact Me</a></li>
+<li><a href="my projects.html">My projects</a></li>
+ <li><a href="contact.html">Contact Me</a></li>
 
 <h2>Introducion</h2>
 
