--- a/my projects.html
+++ b/my projects.html
@@ -4,7 +4,7 @@
 
 <title>my projects</title>
 
-<a href="1.html">Back to Homepage</a>
+<a href="index.html">Back to Homepage</a>
 
 <h1> My Projects </h1>
 
